update readme about use cases